<resources>
    <string name="app_name">AMazeByKenzieEvan</string>

    <string name="title">Welcome to New Maze!!!</string>


    <string name="mazeGenerator">Maze Generator</string>
    <string-array name="MazeGenerators">
        <item>DFS</item>
        <item>Prim</item>
    </string-array>

    <string name="mazeDriver">Maze Driver</string>
    <string-array name="MazeDrivers">
        <item>Select</item>
        <item>Manual</item>
        <item>Wizard</item>
        <item>WallFollower</item>
    </string-array>

    <string-array name="RobotConfigurations">
        <item>Select</item>
        <item>Premium</item>
        <item>Mediocre</item>
        <item>Soso</item>
        <item>Shaky</item>
    </string-array>

    <string name="Rooms">Rooms</string>

    <string name="Level">Level 3</string>

    <string name="Explore">Explore New Maze</string>

    <string name="Revisit">Revisit Old maze</string>


    <string name="RobotConfiguration">Robot Configuration</string>

    <string name="Proceed">Proceed</string>

    <string name="GeneratingMaze">Generating Maze...</string>

    <string name="ShowMaze">Show Full Maze</string>

    <string name="ShowWall">Show Walls</string>

    <string name="ShowSolution">Show Solution</string>

    <string name="Zoom">Zoom</string>
    <string name="ZoomIn">+</string>
    <string name="ZoomOut">-</string>

    <string name="UpKeyDesc">Up key for user to move forward</string>
    <string name="RightKeyDesc">Right key for user to rotate right</string>
    <string name="LeftKeyDesc">Left key for user to rotate left</string>
    <string name="BackKeyDesc">Up key for user to move Backwards</string>


    <string name="RemainingEnergy">Energy: 100%</string>
    <string name="PlayPause">Play/Pause</string>

    <string name="F">F</string>
    <string name="L">L</string>
    <string name="R">R</string>
    <string name="B">B</string>

    <string name="SensorStatus">Sensor Status</string>
    <string name="speed">Speed : 50%</string>

    <string name="Shortcut">Shortcut</string>


    <string name="PathLength">Path Length:</string>
    <string name="ShortestPath">Shortest Possible Path:</string>
    <string name="EnergyConsumed">Energy Consumed:</string>

    <string name="Win">You Have Completed the Maze!!!</string>
    <string name="GoWin">Go2Winning</string>
    <string name="GoLost">Go2Losing</string>

    <string name="Lose">Robot Has Failed!!!</string>
    <string name="LosingReason">Reason for Loss:</string>

    <string name="GoTitle">Go back to Title Page by pressing back button.</string>




</resources>