<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayManuallyActivity">

    <ToggleButton
        android:id="@+id/toggleSolution"
        android:layout_width="73dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:checked="false"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toEndOf="@+id/toggleMap"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textShowSolution"
        android:layout_width="99dp"
        android:layout_height="21dp"
        android:text="@string/ShowSolution"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleSolution" />

    <ToggleButton
        android:id="@+id/toggleWalls"
        android:layout_width="73dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:checked="false"
        android:textColor="#455A64"
        app:layout_constraintEnd_toStartOf="@+id/toggleMap"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textShowWall"
        android:layout_width="87dp"
        android:layout_height="22dp"
        android:text="@string/ShowWall"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleWalls" />

    <ToggleButton
        android:id="@+id/toggleMap"
        android:layout_width="73dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:checked="false"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textShowMaze"
        android:layout_width="99dp"
        android:layout_height="23dp"
        android:text="@string/ShowMaze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleMap" />

    <Button
        android:id="@+id/buttonZoomIn"
        android:layout_width="49dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/ZoomIn"
        android:textSize="24sp"
        android:backgroundTint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textShowSolution" />

    <Button
        android:id="@+id/buttonZoomOut"
        android:layout_width="49dp"
        android:layout_height="60dp"
        android:text="@string/ZoomOut"
        android:textSize="30sp"
        android:backgroundTint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonZoomIn" />

    <TextView
        android:id="@+id/textZoom"
        android:layout_width="65dp"
        android:layout_height="18dp"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:text="@string/Zoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonZoomOut" />

    <ImageButton
        android:id="@+id/buttonFowardKey"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="132dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/UpKeyDesc"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/up_key"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/buttonBackKey"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/BackKeyDesc"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFowardKey"
        app:layout_constraintVertical_bias="0.266"
        app:srcCompat="@drawable/back_key"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/buttonLeftKey"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="100dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/LeftKeyDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/left_key" />

    <ImageButton
        android:id="@+id/buttonRightKey"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="100dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/RightKeyDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/right_key" />

</androidx.constraintlayout.widget.ConstraintLayout>