<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayAnimationActivity">

    <edu.wm.cs.cs301.amazebykenzieevan.views.MazePanel
        android:id="@+id/mazePanelAnimation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/seekbarSpeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textShowMaze2"
        app:layout_constraintVertical_bias="0.416" />

    <Button
        android:id="@+id/buttonZoomIn2"
        android:layout_width="49dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#808080"
        android:text="@string/ZoomIn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textShowSolution2" />

    <Button
        android:id="@+id/buttonZoomOut2"
        android:layout_width="49dp"
        android:layout_height="60dp"
        android:backgroundTint="#808080"
        android:text="@string/ZoomOut"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonZoomIn2" />

    <TextView
        android:id="@+id/textZoom2"
        android:layout_width="65dp"
        android:layout_height="18dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Zoom"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonZoomOut2" />

    <ToggleButton
        android:id="@+id/toggleMap2"
        android:layout_width="73dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:checked="false"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textShowMaze2"
        android:layout_width="106dp"
        android:layout_height="22dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/ShowMaze"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleMap2" />

    <ToggleButton
        android:id="@+id/toggleSolution2"
        android:layout_width="73dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:checked="false"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/toggleMap2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textShowSolution2"
        android:layout_width="99dp"
        android:layout_height="21dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/ShowSolution"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleSolution2" />

    <ToggleButton
        android:id="@+id/toggleWalls2"
        android:layout_width="73dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:checked="false"
        android:textColor="#455A64"
        app:layout_constraintEnd_toStartOf="@+id/toggleMap2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textShowWall2"
        android:layout_width="87dp"
        android:layout_height="22dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/ShowWall"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleWalls2" />

    <ProgressBar
        android:id="@+id/progbarEnergyLevel"
        android:progress="100"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="292dp"
        android:layout_height="17dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textEnergyLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textEnergyLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/RemainingEnergy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/togglePlay"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/toggle_play_pause"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSensorStatus" />

    <TextView
        android:id="@+id/textPlay"
        android:layout_width="48dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/PlayPause"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/togglePlay" />

    <TextView
        android:id="@+id/textF"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="36dp"
        android:background="#69F421"
        android:text="@string/F"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textShowWall2" />

    <TextView
        android:id="@+id/textB"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginBottom="144dp"
        android:background="#69F421"
        android:text="@string/B"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toEndOf="@+id/textL"
        app:layout_constraintTop_toBottomOf="@+id/textR"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textR"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="317dp"
        android:background="#69F421"
        android:text="@string/R"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toEndOf="@+id/textF"
        app:layout_constraintTop_toBottomOf="@+id/textShowWall2" />

    <TextView
        android:id="@+id/textL"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:background="#69F421"
        android:text="@string/L"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textF" />

    <TextView
        android:id="@+id/textSensorStatus"
        android:layout_width="57dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/SensorStatus"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textB" />

    <SeekBar
        android:id="@+id/seekbarSpeed"
        android:layout_width="232dp"
        android:layout_height="27dp"
        android:progress="50"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textSpeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/speed"
        app:layout_constraintBottom_toTopOf="@+id/progbarEnergyLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>