<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StateTitle"
    android:background="@drawable/japanbackground"
    >

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/SpinnerMazeGenerator"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:entries="@array/MazeGenerators"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMazeGenerator" />

    <Spinner
        android:id="@+id/SpinnerMazeDriver"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:dropDownWidth="match_parent"
        android:entries="@array/MazeDrivers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMazeDriver" />

    <TextView
        android:id="@+id/textMazeGenerator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/mazeGenerator"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/textMazeDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/mazeDriver"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerMazeGenerator" />

    <Switch
        android:id="@+id/switchRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:fontFamily="sans-serif-black"
        android:minHeight="48dp"
        android:text="@string/Rooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerMazeDriver" />

    <SeekBar
        android:id="@+id/seekbarLevel"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="310dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLevel" />

    <TextView
        android:id="@+id/textLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Level"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchRoom" />

    <Button
        android:id="@+id/buttonExplore"
        android:layout_width="107dp"
        android:layout_height="71dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/Explore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbarLevel" />

    <Button
        android:id="@+id/buttonRevisit"
        android:layout_width="103dp"
        android:layout_height="71dp"
        android:layout_marginTop="28dp"
        android:text="@string/Revisit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toEndOf="@+id/buttonExplore"
        app:layout_constraintTop_toBottomOf="@+id/seekbarLevel" /><![CDATA[




    "
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="251dp" />


]]>
</androidx.constraintlayout.widget.ConstraintLayout>